# correios-reverso

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: DOCUMENTACAO_COMPLETA.md
scripts/: exemplo_uso_api.py  main.py  teste_completo.py
src/correios_reverso/: __init__.py  auth.py  client.py  config.py  exceptions.py  http_client.py  models.py
src/correios_reverso/api/: __init__.py  app.py  auth.py  deps.py
src/correios_reverso/api/routes/: __init__.py  auxiliares.py  cancelamento.py  destinatarios.py  etiqueta.py  postagem.py  remetentes.py
src/correios_reverso/mcp/: __init__.py  server.py
src/correios_reverso/modules/: auxiliares.py  cancelamento.py  destinatarios.py  etiqueta.py  postagem.py  remetentes.py
tests/: conftest.py  test_api.py  test_auth.py  test_auxiliares.py  test_cancelamento.py  test_client.py  test_destinatarios.py  test_e2e_mock.py  test_etiqueta.py  test_http_client.py  test_models.py  test_postagem.py  test_remetentes.py
